old question section added

--- a/views/dca1semOnlineLessonChapter1.ejs
+++ b/views/dca1semOnlineLessonChapter1.ejs
@@ -260,13 +260,76 @@
                         (1955 – 1964)</li>
                           <li><i>Third Generation</i>  – Integrated
                         Circuits (1964 – 1975)</li>
-                          <li><i>Fourth Generation</i>  - microprocessor
+                          <li><i>Fourth Generation</i>  - Microprocessor & VLSI technology
                         (1975 – 1989)</li>
-                          <li><i>Fifth Generation</i>  (1989-present)</li>
+                          <li><i>Fifth Generation</i>  (1989-present) Artificial Intelligence & ULSI technology</li>
                           
                           
                         </ol>
+<p>
+  <b>OLD QUESTION:</b>
+  </p><p>
+    1. Fourth Generation of computer are characterized by => ICs with VLSI Technology
+  </p><p>
+    2. Which of the following is not a Super computer? => Sony Series  { A. PARAM Series C. Anupam Series
+B. Sony Series D. PACE Series }
 
+  </p><p>
+    3. A common use of computers in offices is for => Word processing.
+  </p><p>
+    4. The computer does not have the following characteristic => Intelligent quotient { a) Intelligent quotient c) Speed
+b) Automatic d) Accuracy }
+  </p><p>
+    5. Which is not a characteristic of computer? => Error Prone {
+a) Error prone c) Versatility
+b) Speed d) Signal }
+  </p><p>
+    6. Which of the following is characteristic of a computer? => Diligence {
+a) Integrity c) Strong Feeling
+b) Diligence d) Strong IQ }
+  </p><p>
+    7. Which of the following is not the characteristic of a Computer => Strong IQ {
+a) Accuracy b) Versatility c) No Feeling d) Strong IQ }
+  </p><p>
+    8. Charles Babbage develop Differential Engine in the year => 1822
+  </p><p>
+    9. Who introduced Stored-program concept => John von Neumann
+  </p><p>
+    10. Who invented the first mechanical adding machine in 1642? => Blaise pascal
+  </p><p>
+    11. First Generation Computer falls in the year => 1942-1955
+  </p><p>
+    12. Computers are classified into how many generation? => 5
+  </p><p>
+    13. Second Generation Computer are made of => Transistors
+    </p><p>
+    14. Third generation of computer falls between the period from => 1964-1975
+    </p><p>
+    15. This generation is characterized by bulky and unreliable computers => 1<SUP>st</SUP>
+    </p><p>
+    16. Unbundling of hardware and software took place in which generation? => 3<sup>rd</sup>
+    </p><p>
+      17. During which generation of computer thousands of vacuum tubes was used => 1st Generation
+    </p><p>
+      18. What difference does the 5th generation computer have from other generation computers? => Technological Advancement
+
+    </p><p>
+      19. Computers in the present generation belong to the => Fifth Generation
+    </p><p>
+      18. How was the generation of computer classified? => by the device used in memory and processor
+    </p><p>
+      19. Graphical user Interface was introduces in ________ generation of computer => 4th Generation.
+    </p><p>
+      20. Third generations computer were first associated with => Integrated circuit
+    </p><p>
+      21. Software such as Windows were developed during => 4th generation
+    </p><p>
+      22. During which generation of computer magnetic core memories was replaced by semiconductor memories => 4th generation
+      </p><p>
+      23. Store concept was introduced in the late 1940s by John von Neumann.
+      </p><p>
+      24. In the 5th generation, VLSI technology became ULSI (Ultra Large Scale Integration) technology, resulting in the production of microprocessor chips having ten million electronic components.
+</p>
 
                       
              
