--- a/views/dca1semOnlineLessonChapter10.ejs
+++ b/views/dca1semOnlineLessonChapter10.ejs
@@ -289,7 +289,63 @@ WMA / WMV - Windows Media Audio / Windows Media Video<br>
 WPAN - Wireless Personal Area Network<br>
 XML - eXtensible Markup Language<br>
 Y2K - Year Two Thousand</p>
-
+<p>
+  <b>OLD QUESTION:</b>
+  </p><p>
+    1. DVD : Digital Versatile (Video) Disk
+    </p><p>
+2. LSI : Large Scale Integrator
+</p><p>
+3. BASIC : Beginner All Purpose Symbolic Instruction Code
+</p><p>
+4. COBOL : Common Business Oriented Language
+</p><p>
+5. IPR : Intellectual Property Right
+</p><p>
+6. EPROM : Erasable Programmable Read Only Memory
+</p><p>
+7. PDA : Personal Digital Assistant
+</p><p>
+8. OMR : Optical Mark Reader
+</p><p>
+9. SDLC : Software Development Life Cycle
+</p><p>
+10. ALU : Arithmetic Logic Unit
+</p><p>
+11. IBM : International Business Machine
+</p><p>
+12. RAM : Random Access Memory
+</p><p>
+13. OCR : Optical Character Reader
+</p><p>
+14. FORTRAN : Formula Translation
+</p><p>
+15. ARPANET : Advance Research Project Agency Network
+</p><p>
+16. BIOS : Basic Input/ Output System
+</p><p>
+17. EEPROM : Electrically Erasable Programmable Read Only Memory
+</p><p>
+18. DVD : Digital Versatile (Video) Disk
+</p><p>
+19. MICR : Magnetic Ink Character Recognition
+</p><p>
+20. EDSAC : Electronic Delay Storage Automatic Calculator
+</p><p>
+21. ROM : Read Only Memory
+</p><p>
+22. EBCDIC : Extended Binary Coded Decimal Interchange Code
+</p><p>
+23. UNIVAC : Universal Automatic Computer
+</p><p>
+24. SSI : Small Scale Integrator
+</p><p>
+25. MAR : Memory Address Register
+</p><p>
+26. LCD : Liquid Crystal Display
+</p><p>
+27. SCSI : Small Computer System Interface
+</p>
 
 
  
