--- a/views/dca1semOnlineLessonChapter3.ejs
+++ b/views/dca1semOnlineLessonChapter3.ejs
@@ -187,23 +187,11 @@
 
 
 <p><code>A central processing unit (CPU)</code> is the brain of a computer system and also called a central
-processor or main processor. </code></p>
-
-
-<p><code>Parts of CPU </code>-</p>
-
-
-<p><code>Arithmetic Logic Unit (ALU)</code> - It is the part of computer processor (CPU) can be used to perform
-arithmetic and logic operations. </p>
-
-
-<blockquote>An arithmetic-logic unit (ALU) is further divided into two parts,
-(AU) arithmetic unit and a logic unit (LU).</blockquote>
-
-
-<p><code>Control Unit (CU)</code> - is a component of a computer's CPU that directs the operation of the
+processor or main processor. Parts of CPU - Arithmetic Logic Unit (ALU) : It is the part of computer processor (CPU) can be used to perform
+arithmetic and logic operations. An arithmetic-logic unit (ALU) is further divided into two parts,
+(AU) arithmetic unit and a logic unit (LU). Control Unit (CU) : is a component of a computer's CPU that directs the operation of the
 processor. It tells the computer's memory, arithmetic and logic unit and input and output devices
-how to respond to the instructions that have been sent to the processor.</p>
+how to respond to the instructions that have been sent to the processor.
 
 <p><code>Registers </code> - When the CPU runs a computer program, it needs somewhere to store the data that
 the instructions operate on (the data that they read and write). This storage is called a register. A CPU usually
@@ -252,7 +240,7 @@ number is called address of the
 location. Each location can hold
 either a data item or an instruction.
 The first address normally stars at
-0.
+0.<br>
 Main Memory Capacity - The memory capacity of a device is commonly expressed in bytes,
 kilobytes, megabytes, gigabytes or terabytes. The memory capacity of a device depends on many
 factors such as the number of available address registers in the CPU. In the case of 32-bit CPUs, they
@@ -277,7 +265,74 @@ extremely fast memory type that acts as a buffer between RAM and the CPU.</p>
 <p><code>HIT/MISS:</code> When the CPU refers to memory and finds the word in cache, it is said to pro
 Otherwise, it is a miss. The performance of cache memory is frequently measured in terms of a quantity
 called hit ratio. Hit ratio = hit / (hit+miss)</p>
- 
+ <p>
+  <b>OLD QUESTION:</b>
+  </p><p>
+    1. When entire CPU both CU and ALU is contained on a single chip called => Microprocessor
+  </p><p>
+    2. Cache memory is an extremely fast small memory between CPU and main memory.
+  </p><p>
+    3. The CPU consists of the ALU and CU.
+  </p><p>
+    4. A high speed buffer between the CPU and the Main memory is => Cache Memory
+  </p><p>
+    5. When the entire CPU is contained on a single ship, it is called => Microprocessor
+  </p><p>
+    6. In basic computer system CPU is formed by combination of => ALU & Control Unit
+  </p><p>
+    7. A special memory integrated in CPU which hold information on
+temporary basis is known as => Register
+  </p><p>
+    8. The section of the CPU that selects, interprets and sees to the execution of program instructions => Control Unit
+  </p><p>
+    9. All units in a computer other than CPU are called components.
+  </p><p>
+    10. Different type of PC chips are neatly assembled on a main circuit board called as => Motherboard
+  </p><p>
+    11. The ALU of a computer normally contain a number of high speed storage element called registers
+  </p><p>
+    12. The register that holds the data temporarily is =>  memory buffer register
+  </p><p>
+    13. Which of the following Register hold current instruction under execution => Instruction Register
+    </p><p>
+    14. The execution of instructions during data processing operation in a computer takes place in the => ALU
+    </p><p>
+    15. Which of the following register hold the address of next instruction to be executed => Program Control Register
+    </p><p>
+    16. A rate at which a computer read/ write data from/ to a memory is known as => Transfer rate
+    </p><p>
+    17. Optical disk compared to magnetic disk => Slower data access speed
+    </p><p>
+    18. Multiple processors are used through parallelism to upgrade performance of a computer. This technique is known as => Parallels computing
+    </p><p>
+    19. A computer is often referred to as a ________ processor because it canstore, process and retrieved data whenever desired => Data
+    </p><p>
+    20. A common processor architecture are CISC, RISC and EPIC.
+    </p><p>
+    21. The other name of the primary memory of a computer is => Main memory
+    </p><p>
+    22. Which memory is non-volatile and maybe written only once? +> PROM
+    </p><p>
+    23. PROM stand for => Programmable Read Only Memory
+    </p><p>
+    24. Memory which is volatile and in which data is stored temporarily is => RAM
+    </p><p>
+    25. If a storage unit can retain data even in case of power failure it is called => Non-Volatile storage
+    </p><p>
+    26. If a memory has 1024 location the address rages from => 0 to 1023
+    </p><p>
+    27. Primary storage of a computer system is also known as => Main memory
+    </p><p>
+    28. Which of the following is the user programmed semiconductor memory? => EPROM
+    </p><p>
+    29. Secondary memory is much cheaper than primary memory.
+    </p><p>
+    30. A memory in which information can be store and erased multiple time is => EEPROM
+    </p><p>
+    31. If a memory has 512 location the address ranges from =>  0 to 511
+    </p><p>
+    32. Volatile Memory means => Loss data in case of power off
+</p>
 
              
                       </div>
