--- a/views/dca1semOnlineLessonChapter4.ejs
+++ b/views/dca1semOnlineLessonChapter4.ejs
@@ -267,7 +267,39 @@ has the ability to be electronically
 reprogrammed and erased. It is often
 found in USB flash drives, MP3 players,
 digital cameras and solid-state drives.</p>
- 
+ <p>
+  <b>OLD QUESTION:</b>
+  </p><p>
+    1. Which is a sequential access device? => Magnetic Tape
+  </p><p>
+    2. Which access method is used for obtaining a record from a cassette tape? => Sequential
+  </p><p>
+    3. Which of the following is the most popular direct access secondary storage device => Magnetic Disk
+  </p><p>
+    4. Which one has the longest life span? => Magnetic drive
+  </p><p>
+    5. Which types of mouse use photo detector => Optical mouse
+  </p><p>
+    6. Optical disk compared to magnetic disk => Slower data access speed
+  </p><p>
+    7. Data backup is required to prevent data loss in the event of => Disk Crash, Hardware Malfunction, Virus attack, Natural Disaster
+  </p><p>
+    8. For small backups we normally use => Flash drives
+  </p><p>
+    9. A mouse can be connected through => Serial port, Wireless, USB port.
+  </p><p>
+    10. Offline storage is used for transfer data between two computers which are not physically connected.
+  </p><p>
+    11. Which statement is true of flash drive? => Popular, Compatible, Portable.
+  </p><p>
+    12. Where is the BIOS stored? => Flash memory chip
+  </p><p>
+    13. Access time means => Time required to locate and retrieved stored data
+    </p><p>
+    14. Full form of FAT is => File Allocation Table
+    </p><p>
+    15. Full form of RAID is => Redundant Array of Inexpensive Disks / Redundant Array of Independent Disks
+</p>
 
              
                       </div>
