--- a/views/dca1semOnlineLessonChapter5.ejs
+++ b/views/dca1semOnlineLessonChapter5.ejs
@@ -310,8 +310,72 @@ speech synthesizer.
 combines basic sound units called phonemes. This is very useful for reading out text information to blind
 persons. 
 </p>
+<p>
+  <b>OLD QUESTION:</b>
+  </p><p>
+    1. Which is a character input printer device => Drum printer <br> { a) Laser printer c) Dot-matrix printer b) Inkjet printer d) Drum printer }
 
-<hr class="w-25">
+  </p><p>
+    2. The process of entering data and instruction into a computer system is known as => Data entry
+  </p><p>
+    3. Units called ________ interfaces transform input signal to binary form => input
+  </p><p>
+    4. Which one is not an input device? => Printer <br> { a) Light pen c) Touch screen b) Scanner d) Printer }
+  </p><p>
+    5. Data processing using computer consist of these activities => Capturing input, manipulating and managing output
+  </p><p>
+    6. Which of the following is not input device? => Printer <br> { a) mouse c) Scanner b) Printer d) keyboard }
+  </p><p>
+    7. A device used for converting pictures, maps and drawings into digital form is known as => Digitizer
+  </p><p>
+    8. The evolution of objective answer paper is done using => OMR
+  </p><p>
+    9. Which device is popularly used in shopping malls? => Bar-code reader
+  </p><p>
+    10. Bank Cheques utilizes => Magnetic Ink Character Recognition
+  </p><p>
+    11. OMR => Optical Mark Reader
+  </p><p>
+    12. OCR stands for => Optical Character Reader
+  </p><p>
+    13. Which of the device is commonly used by Banking industry to process large volume of data => MICR Reader
+    </p><p>
+    14. An ideal output device used by Architecture and Engineer for producing high precision is known as => Plotter
+    </p><p>
+    15. Most popular from of hard copy is obtained from => Printer
+    </p><p>
+    16. Which of the following provide us a screen with graphic icon or menus for user convenient => GUI
+    </p><p>
+    17. Which one is not system software => MS Office 10 <br> { a) MS Office 2010 c) Resource Monitor b) Windows 10 d) Even Viewer }
+    </p><p>
+    18. Which of the following peripherals cannot be attached to a personal computer? => Bus card <br> 
+{ a) Network Interface Card b) Bus Card b) Graphic Card d) Data Card }
+    </p><p>
+    19. Full form of NIC is => Network Interface Card
+    </p><p>
+    20. An example for non-impact printer is the => Laser <br> 
+{ a) Dot matrix c) Inkjet b) Laser d) Plotter }
+    </p><p>
+    21. The dot per inch of an inkjet printer are _______ than a laser printer => Lower
+    </p><p>
+    22. Which of the following is not an output device? => Digitizer <br>
+{ a) Printer c) Monitor b) Digitizer d) Projector }
+</p><p>
+23. Most popular from of hard copy is obtained from => Printer
+</p><p>
+24. Which of the following printer if the fastest? => Laser printer <br>
+{ a) Inkjet c) Dot-matrix b) Drum d) laser printer }
+</p><p>
+25. The output quality of a printer is measured by dots per inch.
+</p><p>
+26. . Laser printer is a type of => Non-impact printer
+</p><p>
+27. Which is a page printer => Laser printer <br>
+Note: <em>A page printer is a computer printer which processes and prints a, whole page at a time.</em>
+</p><p>
+28. Which among the following printing device prints one character at a time => Dot-matrix printer <br>
+{ a) Plotter c) Dot-Matrix Printer b) Inkjet Printer d) Drum Printer }
+</p>
  
 
              
