--- a/views/dca1semOnlineLessonChapter6.ejs
+++ b/views/dca1semOnlineLessonChapter6.ejs
@@ -245,7 +245,51 @@ operating system and applications.
 In general, middleware is a set of tools and data that helps applications use networked resources and
 services. </p>
 
-<hr class="w-25">
+<p>
+  <b>OLD QUESTION:</b>
+  </p><p>
+    1. A set of one or more programs, which controls the operation of a computer is known as => System Software
+  </p><p>
+    2. CASE => Computer aided Software Engineering
+  </p><p>
+    3. Spread sheet software is a type of application software.
+  </p><p>
+    4. Another name of Public Domain Software is => All of the above <br>
+{ a) Freeware c) Open Source Software b) Shareware d) All of the above }
+  </p><p>
+    5. Which of the following is not an application software? => Operating System <br>
+{ a) Spreadsheet software c) Operating System b) Graphic Software d) Database software }
+  </p><p>
+    6. The operating system is a => System Software
+  </p><p>
+    7. Firmware is => Software and Hardware
+  </p><p>
+    8. Which type of software is most expensive? => Patented Software
+  </p><p>
+    9. Which of the following software is not among Application Software =>  Utility Program Software <br>
+{ a) Word Processing Software c) Personal Assistance Software b) Utility Program Software d) Spreadsheet Software }
+  </p><p>
+    10. A software package is => Group of programs that solve specific Problem
+  </p><p>
+    11. The main aim of Software engineering is to produce a system having these properties => Correctness, Usability and Cost-effectiveness
+  </p><p>
+    12. Programs designed to perform specific tasks is called known as => Application Software
+  </p><p>
+    13. SDLC => Software Development Life Cycle
+    </p><p>
+    14. Which one is not a software company in India? => Reliance<br>
+{ a) Infosys c) Reliance b) Wipro d) TCS }
+    </p><p>
+    15. Software used for internet application is => Java
+    </p><p>
+    16. A firmware is => A software substitute for Hardware
+    </p><p>
+    17. Which of the following software is used for creating computerized ledger => Spreadsheet software
+    </p><p>
+    18. This type of software allows user to edit, modify and distribute modified source code => Open source software
+    </p><p>
+    19. A firmware refers to sequence of instruction substituted for => Hardware
+</p>
  
 
              
@@ -353,7 +397,7 @@ services. </p>
                             questionNumber.push('Q2');
                           }
                           //question 3
-                          if(thisStudent.assignmentTheory[i].mcq3 == 'Firmware') {
+                          if(thisStudent.assignmentTheory[i].mcq3 == 'Application Software') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -597,7 +641,7 @@ services. </p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q3. Which software is stored in ROM Chip of Computer?
+                    Q3.  Programs designed to perform specific tasks is called known as _________
                     
                   </p>
                   
@@ -721,7 +765,7 @@ services. </p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                   Q5. ________ is normally a one-time expenses.
+                   Q5. A firmware refers to sequence of instruction substituted for ________.
                    
                   </p>
                   
