--- a/views/dca1semOnlineLessonChapter7.ejs
+++ b/views/dca1semOnlineLessonChapter7.ejs
@@ -112,7 +112,7 @@
                          7. COMPUTER LANGUAGES: (4 - Marks)
 Machine Language, Assembly Language, High-Level Language, Object-Oriented Languages, 
 Some High-Level Languages (FORTRAN, COBOL, BASIC, PASCAL, C and C++), Some More High-Level Languages (Java, C#, RPG, LISP, SNOBOL), 
-Characteristics of a Good Programming Language, Slecting a Luanguage for Coding an Application, Subprogram.
+Characteristics of a Good Programming Language, Selecting a Language for Coding an Application, Subprogram.
                           
              </em>  
                          
@@ -252,7 +252,64 @@ machine language and executes it immediately. </p>
 whenever needed without rewriting. We refer to a subprogram by different names in different
 programming languages. For example, other names used for it are subroutine, subprocedure, and
 function. </p>
-
+<p>
+  <b>OLD QUESTION:</b>
+  </p><p>
+    1. A compiler is a translator program that converts a high-level
+language program into its equivalent machine language program
+and executes it immediately
+  </p><p>
+    2. Computer language is not classified as => medium level language
+  </p><p>
+    3. A translator program that translate and assembly language program into
+its equivalent machine language program is => Assembler
+  </p><p>
+    4. Compiler translate a _______ language into equivalent machine language program => High level
+  </p><p>
+    5. Disadvantages of machine language are => Difficult to program
+  </p><p>
+    6. Assembler converts assembly language to => Machine Language Program
+  </p><p>
+    7. Which statement is not correct with respect to machine language? => Easy to modify
+  </p><p>
+    8. IBM stands for => International Business Machine
+  </p><p>
+    9. To convert high level language to machine language we use => Compiler
+  </p><p>
+    10. Every Computer understand only one language without using any translator which is => Machine Language
+  </p><p>
+    11. A computer program that converts an entire program into machine language is called a/an => compiler
+  </p><p>
+    12. Conversion of Assembly language program to machine language program is performed by => Assembler
+  </p><p>
+    13. A program written in 0's and 1's are known as => Machine language (Binary code an ti bawk).
+    </p><p>
+    14. The advantage of High level language is => Machine Independent
+    </p><p>
+    15. FORTRAN => Formula Translation
+    </p><p>
+    16. Which of the following computer language is used for artificial intelligence? => PROLOG
+    </p><p>
+    17. The language that generate output report resulting from processing of common business application is => COBOL
+    </p><p>
+    18. COBOL stands for => Common Business Oriented Language
+    </p><p>
+    19. Full form of BASIC is => Beginner All-purpose Symbolic Instruction Codes
+    </p><p>
+    20. The first high level language to be introduced in personal computer is BASIC.
+    </p><p>
+    21. Software used for internet application is => Java
+    </p><p>
+    22. RPG => Report Program Generator, a programming language developed by IBM in the mid-60's for developing business applications
+</p><p>
+23. LISP => List processing is the second-oldest high-level programming language in widespread use today. Only Fortran is older, by one year. Developed in 1959 by John McCarthy.
+</p><p>
+24. SNOBOL => String Oriented Symbolic Language
+</p><p>
+25. The C programming language was developed in 1972 by Dennis Ritchie and Brian Kernighan
+</p><p>
+26. The limitation of writing instruction in machine language includes => Error prone, difficult to program, machine dependent.
+</p>
 
  
 
@@ -354,21 +411,21 @@ function. </p>
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory[i].mcq2 == 'Machine') {
+                          if(thisStudent.assignmentTheory[i].mcq2 == 'All of the above') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q2');
                           }
                           //question 3
-                          if(thisStudent.assignmentTheory[i].mcq3 == 'Assembler') {
+                          if(thisStudent.assignmentTheory[i].mcq3 == 'Compiler') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q3');
                           }
                            //question 4
-                          if(thisStudent.assignmentTheory[i].mcq4 == 'High Level') {
+                          if(thisStudent.assignmentTheory[i].mcq4 == 'Java') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -543,7 +600,7 @@ function. </p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. Low Level languages are further divided into _________ language and Assembly language.
+                    Q2. The limitation of writing instruction in machine language includes ________.
                     
                   </p>
                   
@@ -553,11 +610,11 @@ function. </p>
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Lower level" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Error prone" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Lower level
+                                  Error prone
                                   
                                 </label>
                                 
@@ -565,11 +622,11 @@ function. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Symbolic code" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Difficult to programs" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                 Symbolic code
+                                 Difficult to program
                                   
                                 </label>
                                 
@@ -581,7 +638,7 @@ function. </p>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                High level
+                                Machine dependent
                                   
                                 </label>
                                 
@@ -589,11 +646,11 @@ function. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Machine" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="All of the above" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q2">
                                   
-                                 Machine
+                                All of the above
                                   
                                 </label>
                                 
@@ -605,7 +662,7 @@ function. </p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q3. ________ is required to translate the programs written in assembly language into machine language for execution by the computer.
+                    Q3. To convert high level language to machine language we use ________.
                     
                   </p>
                   
@@ -667,7 +724,7 @@ function. </p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q4. ________ languages are simple language that use English and mathematical symbols like +, -, %, /, etc. for its program construction.
+                    Q4. Software used for internet application is ________.
                     
                   </p>
                   
@@ -677,11 +734,11 @@ function. </p>
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Arithmetic" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Java" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q4">
                                   
-                                  Arithmetic
+                                  Java 
                                   
                                 </label>
                                 
@@ -689,11 +746,11 @@ function. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="High Level" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="LISP" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q4">
                                   
-                                  High Level
+                                  LISP
                                   
                                 </label>
                                 
@@ -701,11 +758,11 @@ function. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="Low Level" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="BASIC" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q4">
                                   
-                                 Low Level
+                                 BASIC
                                   
                                 </label>
                                 
@@ -713,11 +770,11 @@ function. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault4Q4" value="Computer" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault4Q4" value="Pascal" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q4">
                                   
-                                 Computer
+                                 Pascal
                                   
                                 </label>
                                 
