--- a/views/dca1semOnlineLessonChapter8.ejs
+++ b/views/dca1semOnlineLessonChapter8.ejs
@@ -227,7 +227,46 @@ with each other.</p>
 <p><code>Handheld Computers </code> – A handheld computer is a device whose size, weight, and design are such
 that a user can use it comfortably by holding it in hand. It is also known as palmtop because it can be
 kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
-
+<p>
+  <b>OLD QUESTION:</b>
+  </p><p>
+    1. A portable computer used by people who need computing resources whenever they go are known as => Notebook Computer
+  </p><p>
+    2. Which computer has expansion slot? => Desktop Computers
+  </p><p>
+    3. Which is not a portable computer? => Desktop <br>
+{ a) Laptop c) Pocket PC b) Tablet d) Desktop }
+  </p><p>
+    4. A personal computer is => micro computer
+  </p><p>
+    5. A workstation differs from a personal computer in => All of the above <br>
+{ a) Processing power c) Operating system b) Storage capacity d) All of the above }
+  </p><p>
+    6. PDA stands for => Personal Digital Assistant
+  </p><p>
+    7. Personal computers use a number of chips mounted on a main circuit board called motherboard.
+  </p><p>
+    8. The first high level language to be introduced in personal computer is BASIC.
+  </p><p>
+    9. Workstation are normally used for => All of the above <br> 
+{ a) Computer Aided Designed c) Multimedia Applications b) Scientific simulations d) All of the above }
+  </p><p>
+    10. The main characteristic Workstation Computer is => processing power is more
+  </p><p>
+    11. Mainframe computer are used in => Banks
+  </p><p>
+    12. Banks, Hospital and Railways usually used one type of the following computer system => Mainframe Computer
+  </p><p>
+    13. To simulate airflow in different speed and different altitude an Aerospace Industry use => Supercomputer
+     </p><p>
+    14. Number cruncher is the informal name for supercomputer
+     </p><p>
+    15. Supercomputer are not used in => Garment Industry <br>
+{ a) Petroleum Industry c) Aerospace Industry b) Garment Industry d) Automobile Industry }
+     </p><p>
+    16. . Which of the following provides central storage facility to store files of several user on a network => File server <br>
+{ a) Database Server c) print server b) File server d) Networked }
+</p>
  
 
              
@@ -321,14 +360,14 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
                             var questionNumber = [];
                           
                           //question 1
-                          if(thisStudent.assignmentTheory[i].mcq1 == 'Film Industries') {
+                          if(thisStudent.assignmentTheory[i].mcq1 == 'Micro Computer') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory[i].mcq2 == 'Workstation') {
+                          if(thisStudent.assignmentTheory[i].mcq2 == 'Supercomputer') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -450,7 +489,7 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
             
                  <p class="fs-5 fw-light">
                     
-                    Q1. Supercomputer are used in ________.
+                    Q1. A personal computer is ________.
                     
                   </p>
                   
@@ -460,11 +499,11 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Office" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Mini Computer" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1">
                                   
-                                 Office
+                                 Mini Computer
                                   
                                 </label>
                                 
@@ -472,11 +511,11 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="USA" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Micro Computer" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2">
                                   
-                                  USA
+                                  Micro Computer
                                   
                                 </label>
                                 
@@ -486,11 +525,11 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="Film Industries" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="Supercomputer" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3">
                                   
-                                  Film Industries
+                                  Supercomputer
                                   
                                 </label>
                                 
@@ -498,11 +537,11 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
                               
                               <div class="form-check ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="Hospital" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="Workstation" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4">
                                   
-                                 Hospital
+                                 Workstation
                                   
                                 </label>
                                 
@@ -517,7 +556,7 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. Unlike PCs that run any OS, all _______ generally run UNIX operating system.
+                    Q2. To simulate airflow in different speed and different altitude an Aerospace Industry use _______.
                     
                   </p>
                   
