--- a/views/dca102onlineclasschapter1.ejs
+++ b/views/dca102onlineclasschapter1.ejs
@@ -251,11 +251,64 @@ various devices that are being used to accomplish the task of  the user.</p>
 utility programs and other software packages to various users working on the computer system.</p>
 
 <p><code>(viii)	Security Management:</code> It establishes data security and integrity.</p>
+<p>
+  <b>OLD QUESTION:</b>
+</p><p>
+1. 
+</p><p>
+2. 
+</p><p>
+3. 
+</p><p>
+4. 
+</p><p>
+5. 
+</p><p>
+6. 
+</p><p>
+7. 
+</p><p>
+8. 
+</p><p>
+9. 
+</p><p>
+10. 
+</p><p>
+11. 
+</p><p>
+12. 
+</p><p>
+13. 
+</p><p>
+14. 
+</p><p>
+15. 
+</p><p>
+16. 
+</p><p>
+17. 
+</p><p>
+18. 
+</p><p>
+19. 
+</p><p>
+20. 
+</p><p>
+21. 
+</p><p>
+22. 
+</p><p>
+23. 
+</p><p>
+24. 
+</p><p>
+25. 
+</p><p>
+26. 
+</p><p>
+27. 
+</p>
 
-                        
-
-
-                      </p>
              
                       </div>
                   
