--- a/views/dca1semOnlineLessonChapter9.ejs
+++ b/views/dca1semOnlineLessonChapter9.ejs
@@ -217,7 +217,41 @@ Information Technology (Intermediary Guidelines) Rules 2011.</li>
 features are - Kiosk Machine gives an accurate and precise detail about the product and services in a
 descriptive manner. It is mainly targeted to implement this machine where there is a large number of a
 crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
-
+<p>
+  <b>OLD QUESTION:</b>
+  </p><p>
+    1. Information Technology Act in India was amended in the year 2008.
+  </p><p>
+    2. When did the IT Act come into effect? => October 17 2000
+  </p><p>
+    3. The information Technology Act 2000 (ITA-2000) amendment Bill 2006 has been passed by Indian parliament on => 23rd December 2008
+  </p><p>
+    4. The information Technology Act 200 (ITA-2000) is an act of Indian Parliament => Number 21 of 2000
+  </p><p>
+    5. The ITA 2000 consist of 94 section and => 4 Schedules
+  </p><p>
+    6. The ITA 2000 consist of => The original Act contained 94 sections, divided into 13 chapters and 4 schedules.
+  </p><p>
+    7. Copy Right grants exclusive rights to use the work such as => All of the above <br>
+{ a) Distributing c) Modifying b) Copying d) All of the above }
+  </p><p>
+    8. IPR => Intellectual Property Right
+  </p><p>
+    9. ________ corresponds to the exclusive right granted to creators of original works => Intellectual property Rights
+  </p><p>
+    10. Which of the following is not application of Information Technology (IT) => Resource Utilization management
+  </p><p>
+    11. UNIVAC stand for => Universal Automatic Computer
+  </p><p>
+    12. RISC stand for => Reduced Instruction set computer
+  </p><p>
+    13. Information kiosks are generally found in => All of the above <br>
+{ a) Mails c) Hotels b) Airports d) All of the above }
+</p><p>
+14. Which of the following is best suitable for the term ‘software piracy’? => Counterfeiting of original product and Illegal copying of genuine software.
+</p><p>
+15. To be considered a cyber-crime, what needs to be involved in the crime? => Network/Internet
+</p>
  
 
              
@@ -318,7 +352,7 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory[i].mcq2 == '17 Ocotober 2000') {
+                          if(thisStudent.assignmentTheory[i].mcq2 == '17 October 2000') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -332,14 +366,14 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                             questionNumber.push('Q3');
                           }
                            //question 4
-                          if(thisStudent.assignmentTheory[i].mcq4 == '66 E') {
+                          if(thisStudent.assignmentTheory[i].mcq4 == '4') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q4');
                           }
                            //question 5
-                          if(thisStudent.assignmentTheory[i].mcq5 == '66 A') {
+                          if(thisStudent.assignmentTheory[i].mcq5 == 'Internet') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -516,11 +550,11 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="17 Ocotober 2000" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="17 October 2000" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  17 Ocotober 2000
+                                  17 October 2000
                                   
                                 </label>
                                 
@@ -528,11 +562,11 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="27 Ocotober 2000" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="27 October 2000" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                 27 Ocotober 2000
+                                 27 October 2000
                                   
                                 </label>
                                 
@@ -552,7 +586,7 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Mac Computer" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="1 August 2000" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q2">
                                   
@@ -630,7 +664,7 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q4. ________ sections deals with publishing private images of others.
+                    Q4. The ITA 2000 consist of 94 section and _______ schedules.
                     
                   </p>
                   
@@ -640,11 +674,11 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="66 C" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="1" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q4">
                                   
-                                 66 C
+                                 1
                                   
                                 </label>
                                 
@@ -652,11 +686,11 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="66 E" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="2" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q4">
                                   
-                                  66 E
+                                  2
                                   
                                 </label>
                                 
@@ -664,11 +698,11 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="67 A" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="3" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q4">
                                   
-                                 67 A
+                                 3
                                   
                                 </label>
                                 
@@ -676,11 +710,11 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault4Q4" value="67 B" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault4Q4" value="4" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q4">
                                   
-                                 67 B
+                                4
                                   
                                 </label>
                                 
@@ -692,7 +726,7 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                   Q5. ________ section deals with penalise for sending of offensive messages.
+                   Q5. To be considered a cyber-crime, what needs to be involved in the crime?
                    
                   </p>
                   
@@ -702,11 +736,11 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault1Q5" value="66 A" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault1Q5" value="Computer" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q5">
                                   
-                                 66 A
+                                 Computer
                                   
                                 </label>
                                 
@@ -714,11 +748,11 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault2Q5" value="68 A" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault2Q5" value="Internet" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q5">
                                   
-                                  68 A
+                                  Internet
                                   
                                 </label>
                                 
@@ -726,11 +760,11 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault3Q5" value="69 A" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault3Q5" value="Data" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q5">
                                   
-                                 69 A
+                                 Data
                                   
                                 </label>
                                 
@@ -738,11 +772,11 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault4Q5" value="69" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault4Q5" value="Technology" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q5">
                                   
-                                  69
+                                  Technology
                                   
                                 </label>
                                 
